fix: Update setuptools version and drf-yasg to latest in requirements.txt

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,7 @@ drf-nested-routers==0.93.5
 # Environment Management
 python-decouple==3.8
 python-dotenv==1.0.0
+setuptools==80.10.2
 
 # Email
 django-ses==3.5.2
@@ -28,7 +29,7 @@ Pillow==10.1.0
 email-validator==2.1.0
 
 # API Documentation
-drf-yasg==1.21.7
+drf-yasg==1.21.14
 
 # Security
 django-ratelimit==4.1.0
