feat: implement robust admin instructor review system and enhance dashboard UX
- Added complete instructor request review workflow including:
  - Fetching instructor requests with pagination, search, and filtering
  - Detailed instructor request view modal
  - Approve / reject flow with admin feedback handling
  - Status badges and visual indicators for request states
  - Keyboard and click-outside modal close handling

- Refactored API service layer:
  - Centralized instructor request APIs
  - Added admin endpoints for reviewing requests and updating user roles
  - Improved response typing and error handling

- Improved authentication context:
  - Centralized User type definitions
  - Exposed user and isAuthenticated flags for better role-based UI control

- Enhanced admin dashboard UI:
  - Loading skeletons for better perceived performance
  - Improved spacing, layout consistency, and visual hierarchy
  - Added date formatting using date-fns
  - Improved cursor, hover, and button feedback

- Routing improvements:
  - Renamed /apply to /apply-as-instructor for clearer intent and UX clarity

- Added react-toastify for scalable notification handling
- General UI polish, type safety improvements, and code cleanup

--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/react": "^19.2.5",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^19.2.3",
+    "@types/react-toastify": "^4.0.2",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
