--- a/server/.env
+++ b/server/.env
@@ -24,5 +24,5 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8000
 
 
 # Site Configuration
-SITE_NAME=Learning Platform
+SITE_NAME=Global Professional Institute
 ADMIN_EMAIL=tamjidzihan@gmail.com
