--- a/server/.env
+++ b/server/.env
@@ -17,10 +17,10 @@ EMAIL_HOST_PASSWORD=lzwhmkavklmdkrbh
 DEFAULT_FROM_EMAIL=tamjidzihan@gmail.com
 
 # Frontend URL (for email verification links)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:5173,
 
 # CORS
-CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8000
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173,http://localhost:8000
 
 
 # Site Configuration
