feat: implement rich text editor for enhanced course content management
* Dependencies:
  - Add jodit-react (^5.3.21) for WYSIWYG editing capabilities
  - Include jodit CSS import in main.tsx for proper styling

* Course Creation/Editing Enhancement:
  - Replace all textarea fields with RichTextEditor component in CreateCoursePage
  - Add rich text editing for: description, learning_outcomes, requirements
  - Implement Controller from react-hook-form for proper integration
  - Improve Media section layout with better thumbnail preview and controls
  - Add visual feedback for thumbnail selection
  - Update navigation after course creation to /instructor/my-courses

* Course Detail Rendering:
  - Update CourseDetailPage to render HTML content using dangerouslySetInnerHTML
  - Add comprehensive CSS classes for proper HTML rendering (lists, headings, links)
  - Ensure safe rendering with proper styling

* Instructor Course Detail View:
  - Enhance InstructorCourseDetailPage with beautifully styled HTML content sections
  - Add color-coded sections with gradient backgrounds:
    - Description (purple theme)
    - Learning Outcomes (blue theme)
    - Requirements (amber theme)
    - Target Audience (cyan theme)
    - Eligibility (emerald theme)
  - Improve curriculum display with better visual hierarchy and animations
  - Add lesson count and student statistics to curriculum header
  - Remove unused tabs (students, reviews) for cleaner interface

* UI Polish:
  - Fix admin sidebar gradient class (add missing 'from-')
  - Improve button styling and hover effects
  - Add consistent spacing and animations

* Benefits:
  - Professional content creation with rich text formatting
  - Better visual presentation of course materials
  - Improved user experience for instructors creating content
  - Consistent HTML rendering across all course views
  - Enhanced curriculum management interface

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.0-alpha.0",
+    "jodit-react": "^5.3.21",
     "lodash": "^4.17.23",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
